app/src/main/jni/sdk/inc/sdkemvbase.h

typedef struct
{
    unsigned char RID[5];
    unsigned char CAPKI;
    unsigned char HashInd;
    unsigned char ArithInd;
    unsigned char ModulLen;
    unsigned char Modul[248];
    unsigned char ExponentLen;
    unsigned char Exponent[3];
    unsigned char CheckSumLen;
    unsigned char CheckSum[20];
    unsigned char ExpireDate[4];
}SDK_EMVBASE_CAPK_STRUCT;
typedef struct{
	unsigned char aidlen;
	unsigned char aid[16];
	unsigned char kernelidlen;
	unsigned char kernelid[8];
}SDK_EMVBASE_CL_HIGHESTAID;
typedef struct
{
    unsigned char AIDLen;
    unsigned char AID[16];
    unsigned char AppLabelLen;
    unsigned char AppLabel[16];
    unsigned char PreferNameLen;
    unsigned char PreferName[16];
    unsigned char Priority;
    unsigned char LangPreferLen;
    unsigned char LangPrefer[8];
    unsigned char AidInTermLen;
    unsigned char AidInTerm[16];
    unsigned char KernelIdentifierLen;
    unsigned char KernelIdentifier[8];
}SDK_EMVBASE_CL_AIDLIST;
typedef enum
{
	SDKEMVBASE_CVM_NA=0,
	SDKEMVBASE_CVM_NOCVMREQ,
	SDKEMVBASE_CVM_OBTAINSIGNATURE,
	SDKEMVBASE_CVM_ONLINEPIN,
	SDKEMVBASE_CVM_CONFVERIFIED,
	SDKEMVBASE_CVM_MOBILE,
	SDKEMVBASE_CVM_PLAINTEXTPIN,
	SDKEMVBASE_CVM_ENCIPHEREDPIN,
 	SDKEMVBASE_CVM_PLAINTEXTPIN_AND_SIGN,
	SDKEMVBASE_CVM_ENCIPHEREDPIN_AND_SIGN,
	SDKEMVBASE_CVM_SKIPCVM,
}SDK_EMVBASE_CVM_RESULT;
extern s32 sdkEMVBaseGetMatchGMCAPK(const u8 *pheInRID, s32 uiCAPKIndex, SDK_EMVBASE_CAPK_STRUCT *pstOutCAPK);
extern bool sdkEMVBaseCheckCAPKExit(u8 *RID, u8 capki);
extern s32 sdkEMVBaseTransInit();
extern s32 sdkEMVBaseEntryPoint(SDK_EMVBASE_CL_HIGHESTAID *tempHighestAID);
extern s32 sdkEMVBaseConfigTLV(const u8 *pheTag, const u8 *pheInData, s32 siInLen);
extern s32 sdkEMVBaseReadTLV(const u8 *pheTag, u8 *pheOutData, s32 *psiOutLen);
extern bool sdkEMVBaseCheckTagExit(u8 *tag);
extern s32 sdkEMVBaseDelTLV(const u8 *pheTag);
extern s32 sdkEMVBaseSetInputPINFun(s32(*fun_inputpin)(u8 ucIccEncryptWay, u8 ucPINTryCount, u8 *pheCreditPwd));
extern s32 sdkEMVBaseSetSpTermCheck(bool enable);		//default is false
extern s32 sdkEMVBaseGetScriptResult(s32 * psiScriptResultLen, u8 * pheScriptResult);
extern bool sdkEMVBaseNeedSignature();
extern s32 sdkEMVBaseGetEntryPointAIDList(SDK_EMVBASE_CL_AIDLIST *entrypointlist ,s32 silistnum ,s32 *psiOutlistnum);		//must call after sdkEMVBaseEntryPoint
extern s32 sdkEMVBaseSetUserSelcetFixedAid(u8 *aidincard, u8 aidlen);	//must call after sdkEMVBaseEntryPoint
extern s32 sdkEMVBaseSetRevocationKey(s32(*fun_cmprevocation)(u8 *key));
extern s32 sdkEMVBaseReSelectApp(SDK_EMVBASE_CL_HIGHESTAID *tempHighestAID);
extern s32 sdkEMVBaseSetTransAmount(u8 *bcdAmount);
extern s32 sdkEMVBaseSetTwoTransAmount(u8 *bcdAmount, u8 *bcdOtherAmount);
extern s32 sdkEMVBasePreTrans();
extern s32 sdkEMVBasePreTransGetTransType();
extern s32 sdkEMVBaseSelectFromTermSelect(u8 *aidnum);
extern s32 sdkEMVBaseGetFromTermSelectAIDList(SDK_EMVBASE_CL_AIDLIST *entrypointlist ,s32 silistnum ,s32 *psiOutlistnum);
extern SDK_EMVBASE_CVM_RESULT sdkEMVBaseGetCVMresult(void);