app/src/main/jni/sdk/inc/sdkjcb.h


extern s32 sdkJcbSetRevocationKey(s32(*fun_cmprevocation)(u8 *key));