app/src/main/java/com/szzt/emvtest/TestLibrary.java

    /**
     * Original signature : <code>int sdkEMVBaseGetMatchGMCAPK(const unsigned char*, int, SDK_EMVBASE_CAPK_STRUCT*)</code><br>
     * <i>native declaration : line 135</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetMatchGMCAPK(byte[], int, test.SDK_EMVBASE_CAPK_STRUCT)} and {@link #sdkEMVBaseGetMatchGMCAPK(com.sun.jna.Pointer, int, test.SDK_EMVBASE_CAPK_STRUCT)} instead
     */
    @Deprecated
    int sdkEMVBaseGetMatchGMCAPK(Pointer pheInRID, int uiCAPKIndex, SDK_EMVBASE_CAPK_STRUCT pstOutCAPK);
    /**
     * Original signature : <code>int sdkEMVBaseGetMatchGMCAPK(const unsigned char*, int, SDK_EMVBASE_CAPK_STRUCT*)</code><br>
     * <i>native declaration : line 135</i>
     */
    int sdkEMVBaseGetMatchGMCAPK(byte pheInRID[], int uiCAPKIndex, SDK_EMVBASE_CAPK_STRUCT pstOutCAPK);
    /**
     * Original signature : <code>bool sdkEMVBaseCheckCAPKExit(unsigned char*, unsigned char)</code><br>
     * <i>native declaration : line 136</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseCheckCAPKExit(java.nio.ByteBuffer, byte)} and {@link #sdkEMVBaseCheckCAPKExit(com.sun.jna.Pointer, byte)} instead
     */
    @Deprecated
    byte sdkEMVBaseCheckCAPKExit(Pointer RID, byte capki);
    /**
     * Original signature : <code>bool sdkEMVBaseCheckCAPKExit(unsigned char*, unsigned char)</code><br>
     * <i>native declaration : line 136</i>
     */
    byte sdkEMVBaseCheckCAPKExit(ByteBuffer RID, byte capki);
    /**
     * Original signature : <code>int sdkEMVBaseTransInit()</code><br>
     * <i>native declaration : line 138</i>
     */
    int sdkEMVBaseTransInit();
    /**
     * Original signature : <code>int sdkEMVBaseEntryPoint(SDK_EMVBASE_CL_HIGHESTAID*)</code><br>
     * <i>native declaration : line 139</i>
     */
    int sdkEMVBaseEntryPoint(SDK_EMVBASE_CL_HIGHESTAID tempHighestAID);
    /**
     * Original signature : <code>int sdkEMVBaseConfigTLV(const unsigned char*, const unsigned char*, int)</code><br>
     * <i>native declaration : line 141</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseConfigTLV(byte[], byte[], int)} and {@link #sdkEMVBaseConfigTLV(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
     */
    @Deprecated
    int sdkEMVBaseConfigTLV(Pointer pheTag, Pointer pheInData, int siInLen);
    /**
     * Original signature : <code>int sdkEMVBaseConfigTLV(const unsigned char*, const unsigned char*, int)</code><br>
     * <i>native declaration : line 141</i>
     */
    int sdkEMVBaseConfigTLV(byte pheTag[], byte pheInData[], int siInLen);
    /**
     * Original signature : <code>int sdkEMVBaseReadTLV(const unsigned char*, unsigned char*, int*)</code><br>
     * <i>native declaration : line 142</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseReadTLV(byte[], java.nio.ByteBuffer, java.nio.IntBuffer)} and {@link #sdkEMVBaseReadTLV(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated
    int sdkEMVBaseReadTLV(Pointer pheTag, Pointer pheOutData, IntByReference psiOutLen);
    /**
     * Original signature : <code>int sdkEMVBaseReadTLV(const unsigned char*, unsigned char*, int*)</code><br>
     * <i>native declaration : line 142</i>
     */
//    int sdkEMVBaseReadTLV(byte pheTag[], ByteBuffer pheOutData, IntBuffer psiOutLen);
    int sdkEMVBaseReadTLV(byte pheTag[], byte [] pheOutData, IntBuffer psiOutLen);
    /**
     * Original signature : <code>bool sdkEMVBaseCheckTagExit(unsigned char*)</code><br>
     * <i>native declaration : line 143</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseCheckTagExit(java.nio.ByteBuffer)} and {@link #sdkEMVBaseCheckTagExit(com.sun.jna.Pointer)} instead
     */
    @Deprecated
    byte sdkEMVBaseCheckTagExit(Pointer tag);
    /**
     * Original signature : <code>bool sdkEMVBaseCheckTagExit(unsigned char*)</code><br>
     * <i>native declaration : line 143</i>
     */
    byte sdkEMVBaseCheckTagExit(ByteBuffer tag);
    /**
     * Original signature : <code>int sdkEMVBaseDelTLV(const unsigned char*)</code><br>
     * <i>native declaration : line 144</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseDelTLV(byte[])} and {@link #sdkEMVBaseDelTLV(com.sun.jna.Pointer)} instead
     */
    @Deprecated
    int sdkEMVBaseDelTLV(Pointer pheTag);
    /**
     * Original signature : <code>int sdkEMVBaseDelTLV(const unsigned char*)</code><br>
     * <i>native declaration : line 144</i>
     */
    int sdkEMVBaseDelTLV(byte pheTag[]);
    /**
     * Original signature : <code>int sdkEMVBaseSetInputPINFun(sdkEMVBaseSetInputPINFun_fun_inputpin_callback*)</code><br>
     * <i>native declaration : line 146</i>
     */
    int sdkEMVBaseSetInputPINFun(TestLibrary.sdkEMVBaseSetInputPINFun_fun_inputpin_callback fun_inputpin);
    /**
     * default is false<br>
     * Original signature : <code>int sdkEMVBaseSetSpTermCheck(bool)</code><br>
     * <i>native declaration : line 147</i>
     */
    int sdkEMVBaseSetSpTermCheck(byte enable);
    /**
     * Original signature : <code>int sdkEMVBaseGetScriptResult(int*, unsigned char*)</code><br>
     * <i>native declaration : line 148</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetScriptResult(java.nio.IntBuffer, java.nio.ByteBuffer)} and {@link #sdkEMVBaseGetScriptResult(com.sun.jna.ptr.IntByReference, com.sun.jna.Pointer)} instead
     */
    @Deprecated
    int sdkEMVBaseGetScriptResult(IntByReference psiScriptResultLen, Pointer pheScriptResult);
    /**
     * Original signature : <code>int sdkEMVBaseGetScriptResult(int*, unsigned char*)</code><br>
     * <i>native declaration : line 148</i>
     */
    int sdkEMVBaseGetScriptResult(IntBuffer psiScriptResultLen, ByteBuffer pheScriptResult);
    /**
     * Original signature : <code>bool sdkEMVBaseNeedSignature()</code><br>
     * <i>native declaration : line 149</i>
     */
    byte sdkEMVBaseNeedSignature();
    /**
     * must call after sdkEMVBaseEntryPoint<br>
     * Original signature : <code>int sdkEMVBaseGetEntryPointAIDList(SDK_EMVBASE_CL_AIDLIST*, int, int*)</code><br>
     * <i>native declaration : line 150</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetEntryPointAIDList(test.SDK_EMVBASE_CL_AIDLIST, int, java.nio.IntBuffer)} and {@link #sdkEMVBaseGetEntryPointAIDList(test.SDK_EMVBASE_CL_AIDLIST, int, com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated
    int sdkEMVBaseGetEntryPointAIDList(SDK_EMVBASE_CL_AIDLIST entrypointlist, int silistnum, IntByReference psiOutlistnum);
    /**
     * must call after sdkEMVBaseEntryPoint<br>
     * Original signature : <code>int sdkEMVBaseGetEntryPointAIDList(SDK_EMVBASE_CL_AIDLIST*, int, int*)</code><br>
     * <i>native declaration : line 150</i>
     */
    int sdkEMVBaseGetEntryPointAIDList(SDK_EMVBASE_CL_AIDLIST entrypointlist, int silistnum, IntBuffer psiOutlistnum);
    /**
     * must call after sdkEMVBaseEntryPoint<br>
     * Original signature : <code>int sdkEMVBaseSetUserSelcetFixedAid(unsigned char*, unsigned char)</code><br>
     * <i>native declaration : line 151</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseSetUserSelcetFixedAid(java.nio.ByteBuffer, byte)} and {@link #sdkEMVBaseSetUserSelcetFixedAid(com.sun.jna.Pointer, byte)} instead
     */
    @Deprecated
    int sdkEMVBaseSetUserSelcetFixedAid(Pointer aidincard, byte aidlen);
    /**
     * must call after sdkEMVBaseEntryPoint<br>
     * Original signature : <code>int sdkEMVBaseSetUserSelcetFixedAid(unsigned char*, unsigned char)</code><br>
     * <i>native declaration : line 151</i>
     */
    int sdkEMVBaseSetUserSelcetFixedAid(ByteBuffer aidincard, byte aidlen);
    /**
     * Original signature : <code>int sdkEMVBaseSetRevocationKey(sdkEMVBaseSetRevocationKey_fun_cmprevocation_callback*)</code><br>
     * <i>native declaration : line 153</i>
     */
    int sdkEMVBaseSetRevocationKey(TestLibrary.sdkEMVBaseSetRevocationKey_fun_cmprevocation_callback fun_cmprevocation);
    /**
     * Original signature : <code>int sdkEMVBaseReSelectApp(SDK_EMVBASE_CL_HIGHESTAID*)</code><br>
     * <i>native declaration : line 155</i>
     */
    int sdkEMVBaseReSelectApp(SDK_EMVBASE_CL_HIGHESTAID tempHighestAID);
    /**
     * Original signature : <code>int sdkEMVBaseSetTransAmount(unsigned char*)</code><br>
     * <i>native declaration : line 157</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseSetTransAmount(java.nio.ByteBuffer)} and {@link #sdkEMVBaseSetTransAmount(com.sun.jna.Pointer)} instead
     */
    @Deprecated
    int sdkEMVBaseSetTransAmount(Pointer bcdAmount);
    /**
     * Original signature : <code>int sdkEMVBaseSetTransAmount(unsigned char*)</code><br>
     * <i>native declaration : line 157</i>
     */
    int sdkEMVBaseSetTransAmount(ByteBuffer bcdAmount);
    /**
     * Original signature : <code>int sdkEMVBaseSetTwoTransAmount(unsigned char*, unsigned char*)</code><br>
     * <i>native declaration : line 158</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseSetTwoTransAmount(java.nio.ByteBuffer, java.nio.ByteBuffer)} and {@link #sdkEMVBaseSetTwoTransAmount(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
     */
    @Deprecated
    int sdkEMVBaseSetTwoTransAmount(Pointer bcdAmount, Pointer bcdOtherAmount);
    /**
     * Original signature : <code>int sdkEMVBaseSetTwoTransAmount(unsigned char*, unsigned char*)</code><br>
     * <i>native declaration : line 158</i>
     */
    int sdkEMVBaseSetTwoTransAmount(ByteBuffer bcdAmount, ByteBuffer bcdOtherAmount);
    /**
     * Original signature : <code>int sdkEMVBasePreTrans()</code><br>
     * <i>native declaration : line 159</i>
     */
    int sdkEMVBasePreTrans();
    /**
     * Original signature : <code>int sdkEMVBasePreTransGetTransType()</code><br>
     * <i>native declaration : line 160</i>
     */
    int sdkEMVBasePreTransGetTransType();
    /**
     * Original signature : <code>int sdkEMVBaseSelectFromTermSelect(unsigned char*)</code><br>
     * <i>native declaration : line 162</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseSelectFromTermSelect(java.nio.ByteBuffer)} and {@link #sdkEMVBaseSelectFromTermSelect(com.sun.jna.Pointer)} instead
     */
    @Deprecated
    int sdkEMVBaseSelectFromTermSelect(Pointer aidnum);
    /**
     * Original signature : <code>int sdkEMVBaseSelectFromTermSelect(unsigned char*)</code><br>
     * <i>native declaration : line 162</i>
     */
    int sdkEMVBaseSelectFromTermSelect(ByteBuffer aidnum);
    /**
     * Original signature : <code>int sdkEMVBaseGetFromTermSelectAIDList(SDK_EMVBASE_CL_AIDLIST*, int, int*)</code><br>
     * <i>native declaration : line 163</i><br>
     * @deprecated use the safer methods {@link #sdkEMVBaseGetFromTermSelectAIDList(test.SDK_EMVBASE_CL_AIDLIST, int, java.nio.IntBuffer)} and {@link #sdkEMVBaseGetFromTermSelectAIDList(test.SDK_EMVBASE_CL_AIDLIST, int, com.sun.jna.ptr.IntByReference)} instead
     */
    @Deprecated
    int sdkEMVBaseGetFromTermSelectAIDList(SDK_EMVBASE_CL_AIDLIST entrypointlist, int silistnum, IntByReference psiOutlistnum);
    /**
     * Original signature : <code>int sdkEMVBaseGetFromTermSelectAIDList(SDK_EMVBASE_CL_AIDLIST*, int, int*)</code><br>
     * <i>native declaration : line 163</i>
     */
    int sdkEMVBaseGetFromTermSelectAIDList(SDK_EMVBASE_CL_AIDLIST entrypointlist, int silistnum, IntBuffer psiOutlistnum);
    /**
     * Original signature : <code>SDK_EMVBASE_CVM_RESULT sdkEMVBaseGetCVMresult()</code><br>
     * <i>native declaration : line 165</i>
     */
    int sdkEMVBaseGetCVMresult();
